src/test/ui/liveness/liveness-use-after-move.nll.stderr
error[E0382]: borrow of moved value: `x`
  --> $DIR/liveness-use-after-move.rs:6:20
   |
LL |     let y = x;
   |             - value moved here
LL |     println!("{}", *x); //~ ERROR use of moved value: `*x`
   |                    ^^ value borrowed here after move
   |
   = note: move occurs because `x` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
